<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
 />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="30sp"
        android:textColor="@color/teal_700"
        android:autofillHints="inputType"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>